# jos-lab

./: .clang_complete  .gitignore  CMakeLists.txt  GNUmakefile  answer-lab4.txt  answers-lab3.txt  grade-functions.sh  grade-lab1.sh  grade-lab2.sh
boot/: boot.S  main.c
fs/: bc.c  fs.c  fs.h  serv.c
inc/: assert.h  elf.h  env.h  error.h  kbdreg.h  memlayout.h  mmu.h  queue.h  stab.h  stdio.h  string.h  types.h  x86.h
kern/: console.c  e1000.c  e1000.h  entrypgdir.c  env.c  env.h  init.c  init.c.orig  kdebug.c  kdebug.h  monitor.c  monitor.h  pci.c  pci.h  pmap.c  pmap.h  printf.c  sched.c  spinlock.c  spinlock.h  syscall.c  syscall.h  trap.c  trapentry.S
lib/: file.c  fork.c  ipc.c  pfentry.S  pgfault.c  printfmt.c  readline.c  string.c  syscall.c
user/: evilhello2.c
